[tool.poetry]
name = "rlss-practice1"
version = "0.1.0"
description = ""
authors = ["Roberto Cipollone <cipollone.rt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
isort = "^5.12.0"
black = "^23.1.0"
jedi = "^0.18.2"
flake8 = "^6.0.0"
tox = "^4.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
